--- a/day2_2/src/main/resources/application.properties
+++ b/day2_2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Day2
+spring.application.name=day2_2
 server.port=8080
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
